--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <option value="-2" class="silver">silver</option>
                             </select>
                         </div>
-                        <div class="color_4 color_band_4">
+                        <div class="color_4 color_band_4" id="tolerance">
                             <select name="band_4_color_4" id="band_4_color_4" class="select_color_4 ">
                                 <option value="None" class="none" selected>Tolerance</option>
                                 <option value="1" class="brown">brown</option>
@@ -188,7 +188,7 @@
                                 <option value="-1" class="gold">gold</option>
                             </select>
                         </div>
-                        <div class="color_5 color_band_5">
+                        <div class="color_5 color_band_5" id="tolerance">
                             <select name="band_5_color_5" id="band_5_color_5" class="select_color_5 ">
                                 <option value="None" class="none" selected>Tolerance</option>
                                 <option value="1" class="brown">brown</option>
@@ -279,7 +279,7 @@
                                 <option value="10" class="silver">silver</option>
                             </select>
                         </div>
-                        <div class="color_6 color_band_6">
+                        <div class="color_6 color_band_6" id="tolerance">
                             <select name="band_6_color_2" id="band_6_color_6" class="select_color_6 ">
                                 <option value="None" class="none" selected>Tolerance</option>
                                 <option value="100" class="brown">brown</option>
