--- a/index.html
+++ b/index.html
@@ -57,7 +57,16 @@
 
 
                 <div class="resistor_color">
-
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
                     <div id="main_box_4" class="main_box_4  display_none">
                         
 
@@ -294,6 +303,16 @@
                     </div>
 
 
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
                 </div>
                 
 
