--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <a href="https://github.com/RCHAMEXE"><i class="uil uil-github-alt"></i> Github</a>
             <a href="https://facebook.com/3LIIX1"><i class="uil uil-facebook-f"></i> Facebook</a>
         </div>
+        
     </div>
+    <h3 class="title-head">IF YOU OPEN THE WEBSITE IN YOUR PHONE PLEASE ACTIVE DESKTOP VIEW MODE FOR MORE CONFORTOBLE USING :)</h3>
 
 
         <main class="main_container ">
@@ -330,6 +332,9 @@
                 </div>
             </div>
         </main>
+        <h3 class="title-head">WEBSITE CREATOR : ALI RCHAM 
+            <br> WEBSITE IDEA : AYACHI RAHALI
+        </h3>
 
 </body>
 <!-- Java scrtipt file link -->
