--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                     <hr class="new5">
                     <hr class="new5">
                     <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
+                    <hr class="new5">
                     <div id="main_box_4" class="main_box_4  display_none">
                         
 
