--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             </div>
         </main>
         <h3 class="title-head">WEBSITE CREATOR : ALI RCHAM 
-            <br> WEBSITE IDEA : AYACHI RAHALI
+            <br> WEBSITE IDEA : EL AYACHI RAHALI
         </h3>
 
 </body>
