--- a/index.html
+++ b/index.html
@@ -360,11 +360,10 @@
           </div>
       </div>
   </main>
-  
-</div>
-<h3 class="title-head">WEBSITE CREATOR : ALI RCHAM 
-  <br> WEBSITE IDEA : EL AYACHI RAHALI
-</h3>
+  <div class="footer">
+          <h3 class="footer-text"><i class="uil uil-copyright">WEBSITE CREATOR : ALI RCHAM <br>WEBSITE IDEA : EL AYACHI RAHALI</i></h3>
+        </div> 
+
 
 </body>
 <script src="JS/app.js"></script>
