--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
           </div>
       </div>
   </main>
+</div>
   <div class="footer">
           <h3 class="footer-text"><i class="uil uil-copyright">WEBSITE CREATOR : ALI RCHAM <br>WEBSITE IDEA : EL AYACHI RAHALI</i></h3>
         </div> 
