--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
   </main>
 </div>
   <div class="footer">
-          <h3 class="footer-text"><i class="uil uil-copyright">WEBSITE CREATOR : ALI RCHAM <br>WEBSITE IDEA : EL AYACHI RAHALI</i></h3>
+          <h3 class="footer-text"><i class="uil uil-copyright">WEBSITE CREATOR : ALI RCHAM </i><br> WEBSITE IDEA : EL AYACHI RAHALI</h3>
         </div> 
 
 
